<resources>
    <string name="app_name">Sana</string>
    <string name="login">ورود</string>
    <string name="app_persian_full_name">نرم‌افزار مدیریت کتاب‌خانه ثنا</string>
    <string name="forgot_password">رمز عبور خود را فراموش کرده‌ام.</string>
    <string name="user_name">نام کاربری</string>
    <string name="password">رمز عبور</string>
    <string name="login_picture_credit">Photo of a library by Erol Ahmed on Unsplash</string>
    <string name="search_hint">جست‌و‌جو...</string>
    <string name="hp_phoenix">هری پاتر و محفل ققنوس</string>
    <string name="ernest_hemingway">ارنست همینگوی</string>
    <string name="flat_icon">taken from flaticon.com</string>
    <string name="cheshme">نشر چشمه</string>
    <string name="story">داستان</string>
    <string name="details">جزئیات</string>
    <string name="unsplash">taken from UnSplash</string>
    <string name="xml_header_name">Content-type</string>
    <string name="xml_header_value">text/xml;charset=UTF-8</string>
    <string name="xml_login_result_tag">FLoginResult</string>
    <string name="xml_search_result_tag">FSearchResult</string>
    <string name="xml_search_ds_tag">DS</string>
</resources>
