<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/doc_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/hp_phoenix"
        android:textSize="24sp"
        android:textStyle="bold" />


    <RelativeLayout
        android:id="@+id/author_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/doc_title"
        android:layout_marginBottom="5dp">

        <ImageView
            android:id="@+id/author_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:contentDescription="@string/flat_icon"
            android:src="@drawable/ic_author" />


        <TextView
            android:id="@+id/doc_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/author_icon"
            android:layout_toStartOf="@+id/author_icon"
            android:text="@string/ernest_hemingway"
            android:textAlignment="center"
            android:textSize="12sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/publisher_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/author_bar"
        android:layout_marginBottom="5dp">


        <ImageView
            android:id="@+id/publisher_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:contentDescription="@string/flat_icon"
            android:src="@drawable/ic_publisher" />


        <TextView
            android:id="@+id/doc_publisher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/publisher_icon"
            android:layout_toStartOf="@+id/publisher_icon"
            android:text="@string/cheshme"
            android:textAlignment="center"
            android:textSize="12sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/subject_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/publisher_bar"
        android:paddingBottom="5dp">


        <ImageView
            android:id="@+id/subject_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:contentDescription="@string/flat_icon"
            android:src="@drawable/ic_subject" />


        <TextView
            android:id="@+id/doc_subject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/subject_icon"
            android:layout_toStartOf="@+id/subject_icon"
            android:text="@string/story"
            android:textAlignment="center"
            android:textSize="12sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/doc_detail_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/subject_bar"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/see_doc_detail_bg"
        android:text="@string/details" />

    <RelativeLayout
        android:id="@+id/doc_line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/doc_detail_button"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="3dp"
        android:foreground="#afafaf" />

</RelativeLayout>

